# UsrGrp-Manager-TUI

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Improvements.md  README.md  SECURITY.md  filter.conf  keybinds.conf  theme.conf
.github/: pull_request_template.md
.github/workflows/: doc-rust.yml  rust.yml
docs/: Improvements.md  RELEASE.md  roadmap.md  testing.md
src/: error.rs  lib.rs  main.rs  search.rs
src/app/: filterconf.rs  keymap.rs  mod.rs  update.rs
src/sys/: mod.rs
src/ui/: components.rs  groups.rs  mod.rs  users.rs
tests/: integration_test.rs  unit_test.rs
