[package]
name = "usrgrp-manager"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "TUI to view and manage information about UNIX users and groups"

[[bin]]
name = "usrgrp-manager"
path = "src/main.rs"

[lib]
name = "usrgrp_manager"
path = "src/lib.rs"

[dependencies]
crossterm = "0.29.0"
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
file-parse = []

