[package]
name = "usrgrp-manager"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "TUI to view and manage information about UNIX users and groups"

[[bin]]
name = "usrgrp-manager"
path = "src/main.rs"

[lib]
name = "usrgrp_manager"
path = "src/lib.rs"

[dependencies]
crossterm = "0.29.0"
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
dirs-next = "2.0"

[dev-dependencies]
tempfile = "3.23.0"

[features]
default = []
file-parse = []

